deploy/TimeBilling.Projector/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: timebillingprojector
  labels:
    app: timebillingprojector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: timebillingprojector
  template:
    metadata:
      labels:
        app: timebillingprojector
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
    spec:
      volumes:
        - name: timebillingprojector-storage
          persistentVolumeClaim:
            claimName: timebillingprojector-claim
      containers:
      - name: timebillingprojector
        image: registry:5000/timebillingprojector:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
        # livenessProbe:
        #   httpGet:
        #     path: /health
        #     port: http
        #   initialDelaySeconds: 30
        #   timeoutSeconds: 30
        # readinessProbe:
        #   httpGet:
        #     path: /health
        #     port: http
        #   initialDelaySeconds: 30
        #   timeoutSeconds: 30
        resources:
          requests:
            memory: "32Mi"
            cpu: "16m"
          limits:
            memory: "128Mi"
            cpu: "512m"
        volumeMounts:
          - mountPath: "/data"
            name: timebillingprojector-storage
---
