deploy/TimeBilling.Projector/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: timebillingprojector
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: "timebillingprojector.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: timebillingprojector
            port:
              number: 80
  - host: "timebillingprojector"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: timebillingprojector
            port:
              number: 80
